# ShaderLabFramework

./: .gitignore  CMakeLists.txt  Copyright.txt  Makefile  README.md  main.cpp
off/: cube.off  monkey.off  square.off
opengl/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  openglheaders.h  scene.cpp  scene.h  texture.cpp  texture.h
qt/: EditWindow.cpp  EditWindow.h  Editor.cpp  Editor.h  GLSLCodeEditor.cpp  GLSLCodeEditor.h  GLSLEditorWidget.cpp  GLSLEditorWidget.h  GLSLEditorWidget.ui  GLSLEditorWindow.cpp  GLSLEditorWindow.h  GLSLEditorWindow.ui  MatricesWidget.cpp  MatricesWidget.h  MatricesWidget.ui  Matrix4x4Widget.cpp  Matrix4x4Widget.h  Matrix4x4Widget.ui  SyntaxHighlighterGLSL.cpp  Vector4Widget.cpp  Vector4Widget.h  Vector4Widget.ui  codeeditor.cpp  codeeditor.h  gldisplay.cpp  gldisplay.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialEditorWidget.cpp  materialEditorWidget.h  materialEditorWidget.ui  ressources.qrc  texturewidget.cpp  texturewidget.h  uniformEditorWidget.cpp  uniformEditorWidget.h  uniformEditorWidget.ui
qt/rcs/: mono-key-enter.xcf
